# pip-boy

./: .gitignore  README.md  pyproject.toml
docs/: hardware-mods.md
dump/: Pip_members.tsv  Pip_members_full.tsv  SD_APPINFO_customimg.info  SD_USER_asteroid.js  SD_USER_customimg.js  SD_USER_text.js  SD_USER_text.txt  SD_manifest.txt  SD_settings.json  sample_updateBrightness.js  spcx.info  spcx.js
firmware/: build_pipboy.sh  build_v2.sh
tools/: pip_classify.py  pip_dump.py  pip_fetch_sd.py  pip_install_app.py  pip_pull_fw.py  pip_ticker.py  run_ticker.sh
